# CognitiveSync

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CognitiveSync_ARCHITECTURE.docx  CognitiveSync_PID.docx  CognitiveSync_PRD.docx  CognitiveSync_TASK_PLAN.docx  CognitiveSync_TECH_STACK.docx  CognitiveSync_WORKFLOWS.docx  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start_demo.sh
.claude/plan/: cognitiveSync-full-build.md
alembic/: env.py
alembic/versions/: 8626f459da6e_initial_schema.py  893cdc022dcc_enrollment_and_profiles.py
api/: main.py
api/middleware/: __init__.py  auth.py  rbac.py
api/routes/: audit.py  cascade.py  config.py  demo.py  employees.py  model.py  pipeline.py  profiles.py  recommendations.py  scores.py
api/schemas/: common.py  enrollment.py  request.py  response.py
config/: __init__.py  settings.py  vault.py
data/: __init__.py  synthetic.py
deploy/: init-schemas.sql
docs/: DEMO_GUIDE.md  HANDOFF_PERSON_D.md  enrollment_template.json
ingestion/: __init__.py  anonymizer.py  feature_extractor.py  scheduler.py
ingestion/adapters/: __init__.py  base.py  github.py  mock.py  msgraph.py  slack.py
ingestion/db/: __init__.py  models.py  session.py
intelligence/: __init__.py  cascade.py  edges.py  features.py  gnn_model.py  graph_builder.py  inference.py  profile_updater.py  tests.py  trainer.py
output/: __init__.py  dashboard.html  powerbi_connector.py
output/teams_bot/: __init__.py  bot.py  cards.py
scripts/: dev-setup.sh  mint_demo_token.py  run_demo.py  seed_demo_data.py
tests/: conftest.py
tests/unit/: test_cascade.py  test_edges.py  test_features.py  test_gnn_model.py  test_graph_builder.py  test_inference.py
